# openGL_learn

./: .gitignore  CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
shader/: fragment.fs  vertex.vs
src/: common.cpp  common.h  main.cpp
